fix href to home page

--- a/miniblog/templates/about.html
+++ b/miniblog/templates/about.html
@@ -10,7 +10,7 @@
 <body>
     <h1>About</h1>
     <p>This is a mini blog app, built using Django.</p>
-    <p>Go back to my <a href="/home">Home</a> page.</p>
+    <p>Go back to my <a href="/">Home</a> page.</p>
 </body>
 
 </html>
