add post list url path with jinja to post nav item

--- a/miniblog/templates/layout.html
+++ b/miniblog/templates/layout.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="/" title='home'>🏠</a> |
         <a href="/about" title='about'>🤔</a> |
-        <a href="/posts" title='posts'>📰</a>
+        <a href="{% url 'posts:list' %}" title='posts list'>📰</a>
     </nav>
     <main>
         {% block content %}
