--- a/miniblog/users/templates/users/register_user.html
+++ b/miniblog/users/templates/users/register_user.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Sign Up
+    Sign Up | Register
 {% endblock %}
 
 {% block content %}
+    <h1>Sign Up | Register</h1>
     <form action="" method="post">
         <label for="username">Username: </label>
         <input id="username" type="text" name="username" value="{{ username }}">
@@ -15,6 +16,6 @@
         <label for="password">Password: </label>
         <input id="password" type="password" name="password" value="{{ password }}">
         
-        <input type="submit" value="OK">
+        <input type="submit" value="Submit">
     </form>
 {% endblock%}
