--- a/miniblog/users/templates/users/register_user.html
+++ b/miniblog/users/templates/users/register_user.html
@@ -6,16 +6,8 @@
 
 {% block content %}
     <h1>Sign Up | Register</h1>
-    <form action="" method="post">
-        <label for="username">Username: </label>
-        <input id="username" type="text" name="username" value="{{ username }}">
-
-        <label for="email">Email: </label>
-        <input id="email" type="email" name="email" value="{{ email }}">
-
-        <label for="password">Password: </label>
-        <input id="password" type="password" name="password" value="{{ password }}">
-        
-        <input type="submit" value="Submit">
+    <form action="/users/register" method="post" class="form-with-validation">
+        {% csrf_token %}
+        {{form}}
     </form>
 {% endblock%}
