--- a/miniblog/users/templates/users/register_user.html
+++ b/miniblog/users/templates/users/register_user.html
@@ -9,5 +9,6 @@
     <form action="/users/register" method="post" class="form-with-validation">
         {% csrf_token %}
         {{form}}
+        <button>Submit</button>
     </form>
 {% endblock%}
