--- a/miniblog/users/templates/users/register_user.html
+++ b/miniblog/users/templates/users/register_user.html
@@ -6,9 +6,9 @@
 
 {% block content %}
     <h1>Sign Up | Register</h1>
-    <form action="/users/register" method="post" class="form-with-validation">
+    <form action="/users/register/" method="post" class="form-with-validation">
         {% csrf_token %}
         {{form}}
-        <button>Submit</button>
+        <button class="form-submit">Submit</button>
     </form>
 {% endblock%}
