--- a/miniblog/templates/layout.html
+++ b/miniblog/templates/layout.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}
-            Django Miniblog
-        {% endblock %}
-    </title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %} Django Miniblog {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  </head>
+  <body>
     <nav>
-        <a href="/" title='home'>
-            <span role="img" aria-label="Home" >🏠</span>
-        </a> |
-        <a href="/about" title='about'>
-            <span role="img" aria-label="About" >🤔</span>
-        </a> |
-        <a href="{% url 'posts:list' %}" title='posts list'>
-            <span role="img" aria-label="Posts" >📰</span>
-        </a>
+      <a href="/" title="home">
+        <span role="img" aria-label="Home">🏠</span>
+      </a>
+      |
+      <a href="/about" title="about">
+        <span role="img" aria-label="About">🤔</span>
+      </a>
+      |
+      <a href="{% url 'posts:list' %}" title="posts list">
+        <span role="img" aria-label="Posts">📰</span>
+      </a>
+      <a href="{% url 'users:register' %}" title="user registration">
+        <span role="img" aria-label="Posts">👤</span>
+      </a>
     </nav>
-    <main>
-        {% block content %}
-        {% endblock %}
-    </main>
-</body>
+    <main>{% block content %} {% endblock %}</main>
+  </body>
 </html>
