add aria label for user registration

--- a/miniblog/templates/layout.html
+++ b/miniblog/templates/layout.html
@@ -22,7 +22,7 @@
       </a>
       |
       <a href="{% url 'users:register' %}" title="user registration">
-        <span role="img" aria-label="Posts">👤</span>
+        <span role="img" aria-label="User Registration">👤</span>
       </a>
     </nav>
     <main>{% block content %} {% endblock %}</main>
