--- a/miniblog/static/css/style.css
+++ b/miniblog/static/css/style.css
@@ -1,41 +1,96 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  min-height: 100vh;
-  background-color: black;
-  color: whitesmoke;
-  font-size: 3rem;
-  display: flex;
-  flex-flow: column;
+    min-height: 100vh;
+    background-color: black;
+    color: whitesmoke;
+    font-size: 3rem;
 }
 
 nav {
-  padding: 1rem;
-  background-color: #44b78b;
-  color: white;
-  font-size: 2.5rem;
+    padding: 1rem;
+    background-color: #44B78B;
+    color: white;
+    font-size: 2.5rem;
 }
 
 main {
-  flex-grow: 1;
-  display: grid;
-  place-content: center;
+    padding: 1rem;
+}
+
+section {
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
 }
 
 h1,
+h2 {
+    font-size: 2.5rem;
+}
+
 p {
-  text-align: center;
+    font-size: 1rem;
 }
 
 a {
-  text-decoration: none;
-  color: #81dbb8;
+    text-decoration: none;
+    color: #81dbb8;
 }
 
 a:hover {
-  opacity: 0.85;
+    opacity: .85;
+}
+
+.banner {
+    display: block;
+    width: 100%;
+    max-width: 800px;
+}
+
+.form-with-validation {
+    font-size: 1rem;
+    padding: 1rem;
+    display: flex;
+    flex-flow: column;
+    gap: 1rem;
+}
+
+.form-with-validation div {
+    display: flex;
+    flex-flow: column;
+    gap: 0.5rem;
+}
+
+.form-with-validation input {
+    padding: 0.25rem;
+    max-width: 300px;
+}
+
+.form-submit {
+    padding: 0.5rem;
+    border-radius: 10px;
+    width: 125px;
+}
+
+.helptext {
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+
+.helptext ul {
+    list-style-type: none;
+}
+
+.errorlist {
+    color: #F00;
+    margin-left: 2rem;
+}
+
+.errorlist li::marker {
+    content: '🚨 ';
 }
