--- a/miniblog/posts/templates/posts/post_page.html
+++ b/miniblog/posts/templates/posts/post_page.html
@@ -1,13 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    {{post.title}}
+    {{blogpost.title}}
 {% endblock %}
 
 {% block content %}
     <section>
-        <h1>{{post.title}}</h1>
-        <p>{{post.date}}</p>
-        <p>{{post.body}}</p>
+        <h1>{{blogpost.title}}</h1>
+        <p>{{blogpost.date}}</p>
+        <p>{{blogpost.body}}</p>
     </section>
 {% endblock%}
