--- a/miniblog/posts/templates/posts/posts_list.html
+++ b/miniblog/posts/templates/posts/posts_list.html
@@ -11,10 +11,9 @@
         {% for post in posts %}
             <article class="post">
                 <h2>
-                    {{post.title}}
-                    {% comment %} <a href="{% url 'posts:page' slug=post.slug %}">
+                    <a href="{% url 'posts:page' slug=post.slug %}">
                         {{post.title}}
-                    </a>                     {% endcomment %}
+                    </a>                    
                 </h2>
                 <p>{{post.date}}</p>
                 <p>{{post.body}}</p>
