--- a/miniblog/static/css/styles.css
+++ b/miniblog/static/css/styles.css
@@ -11,6 +11,13 @@ header {
     padding: 1rem;
 }
 
+header a {
+    color: #d61091;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
 nav ul {
     list-style: none;
     padding: 0;
