add footer styles

--- a/miniblog/static/css/styles.css
+++ b/miniblog/static/css/styles.css
@@ -42,3 +42,11 @@ nav ul li a {
 main {
     padding: 2rem;
 }
+
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-top: 20px;
+}
