add blog list footer

--- a/miniblog/templates/api/blog_list.html
+++ b/miniblog/templates/api/blog_list.html
@@ -19,6 +19,8 @@
             {% endfor %}
         </ul>
     </div>
-    
+    <footer>
+        <p>Django Miniblog &copy; 2024 | <a href="https://github.com/alindaByamukama/django-miniblog" target="_blank" rel="noopener noreferrer">GitHub Source Code</a></p>
+    </footer>
 </body>
 </html>
