--- a/miniblog/templates/api/base.html
+++ b/miniblog/templates/api/base.html
@@ -19,6 +19,8 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        {% block content %}{% endblock %}
+    </main>
 </body>
 </html>
