--- a/miniblog/templates/api/base.html
+++ b/miniblog/templates/api/base.html
@@ -22,5 +22,8 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+    <footer>
+        <p>Django Miniblog &copy; 2024 | <a href="https://github.com/alindaByamukama/django-miniblog" target="_blank" rel="noopener noreferrer">GitHub Source Code</a></p>
+    </footer>
 </body>
 </html>
