--- a/miniblog/templates/api/login.html
+++ b/miniblog/templates/api/login.html
@@ -7,14 +7,7 @@
     <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
+        {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
