--- a/miniblog/static/css/styles.css
+++ b/miniblog/static/css/styles.css
@@ -94,6 +94,17 @@ footer {
     background: #333;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0;
     margin-top: 20px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer img.logo {
+    max-width: 100px;
+}
+
+footer p {
+    margin: 10px 0 0;
 }
