--- a/miniblog/templates/api/base.html
+++ b/miniblog/templates/api/base.html
@@ -15,7 +15,7 @@
                 <li><a href="{% url 'blog_list' %}">Blog List</a></li>
                 <li><a href="{% url 'user_list' %}">User List</a></li>
                 <li><a href="{% url 'login' %}">Login</a></li>
-                {% comment %} <li><a href="{% url 'register' %}">Register</a></li> {% endcomment %}
+                <li><a href="{% url 'register' %}">Register</a></li>
             </ul>
         </nav>
     </header>
