add image path to footer logo

--- a/miniblog/templates/api/base.html
+++ b/miniblog/templates/api/base.html
@@ -23,7 +23,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <img src="{% static 'path/to/your/logo.png' %}" alt="Logo" class="logo">
+        <img src="{% static 'static/images/python-django-logo.png' %}" alt="Python Django Logo" class="logo">
         <p>&copy; <span id="year"></span> | Django Miniblog | <a href="https://github.com/alindaByamukama/django-miniblog" target="_blank" rel="noopener noreferrer" title="Alinda's Project Source Code">GitHub Source Code</a></p>
     </footer>
     <script src="{% static 'scripts.js' %}"></script>
