--- a/miniblog/templates/api/base.html
+++ b/miniblog/templates/api/base.html
@@ -26,6 +26,6 @@
         <img src="{% static 'images/python-django-logo.png' %}" alt="Python Django Logo" class="logo">
         <p>&copy; <span id="year"></span> | Django Miniblog | <a href="https://github.com/alindaByamukama/django-miniblog" target="_blank" rel="noopener noreferrer" title="Alinda's Project Source Code">GitHub Source Code</a></p>
     </footer>
-    <script src="{% static 'scripts.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
